Fixed alignment of nav menu in mobile view.  Updated Readme

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ h1 {
   text-shadow: 2px 2px #000000;
 }
 
+ul.nav {
+  padding-left: 0;
+}
+
 .nav {
   display: flex;
   flex-direction: column;
